--- a/download.html
+++ b/download.html
@@ -92,7 +92,7 @@
 
 <div class="download-options hidden" id="downloadOptions">
     <button class="option hidden" id="fluxusZ">FluxusZ</button>
-    <button class="option hidden" id="frostware">Frostware</button>
+    <button class="option hidden" id="frostware" href="https://gofile.io/d/YHKJYI">Frostware</button>
     <button class="option hidden" id="backButton">Back</button> <!-- Back button -->
     <button class="option hidden" id="mainMenuButton">Back to Main Menu</button> <!-- Back to Main Menu button -->
 </div>
