--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="./about.html">About</a></li>
-      <li><a href="./download">Download</a></li>
-      <li><a href="./faq.html">FAQ</a></li>
+      <li><a href="./download.html">Download</a></li>
+      <li><a href="./FAQ.html">FAQ</a></li>
     </ul>
   </nav>
 
